# VERTICAL-LIGHT-OS

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  1754584120497.Q and Ans.docx  DEPLOYMENT_STATUS.md  GITHUB_DEPLOYMENT_INSTRUCTIONS.md  MICROSERVICES_ARCHITECTURE.md  MODULAR_AI_ARCHITECTURE_PHASE1_COMPLETE.md  Makefile  README.md  REORGANIZATION_COMPLETE.md  STRATEGIC_ROADMAP.md  clean_emojis.py  docker-compose.dev.yml  docker-compose.hospital.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: DATABASE_SETUP_GUIDE.txt  INSTALL_INSTRUCTIONS.txt  PROJECT_STRUCTURE_SUMMARY.py  app.py  business_config_app.py  install_database.bat  install_database.ps1  install_postgres.bat  main.py  quick_database_test.py  setup_test_database.bat  test_configuration.py  test_database_integration.py  test_production_integration.py  test_real_integration.py  verify_database_integration.py  verify_lifecycle_benchmarking.py  verify_postgres.bat
backend/api/: benchmark_routes.py  hospital_analysis_api.py  hospital_routes.py  routes.py
backend/applications/: __init__.py
backend/cli/: benchmark_cli.py
backend/config/: adaptive_learner.json  advanced_config_manager.py  base.json  campaign_generator.json  competitive_analysis.json  config_manager.py  development.json  dynamic_market_data.json  goal_parser.json  hospital_consulting_config.json  intelligence_engine.json  optimization_engine.json  production.json  progressive_intelligence.json  semantic_analysis.json  strategic_synthesizer.json  test_market_data_scenarios.json  validation_report.txt
backend/database/: FREE_HEALTHCARE_DATA_SOURCES.txt  HOSPITAL_DATA_COLLECTION_GUIDE.txt  collect_hospital_data.py  demo_benchmarking.py  hospital_db.py  production_hospital_db.py  production_hospital_schema.sql  schema.sql  success_demo.py  validate_current_system.py
backend/demos/: __init__.py  demo_clean.py  hospital_intelligence_demo.py  integration_test.py  interactive_hospital_system.py  phase1_week1_2_demo.py  simple_demo.py  simple_hospital_system.py
backend/models/: hospital_schemas_simple.py  local_business.py  schemas.py
backend/scripts/: initialize_benchmark_db.py
backend/security/: auth.py
backend/services/: benchmark_data_collection.py  data_persistence.py  hospital_intelligence_engine.py  implementation_success_engine.py  local_business_assistant.py  service_factory.py  ultra_local_business_os.py
backend/templates/: configure.html  dashboard.html  index.html  setup.html  whatsapp_setup.html
backend/tests/: test_adaptive_learner_dynamic.py  test_campaign_generator_dynamic.py  test_configuration_system.py  test_data_quality_service_dynamic.py  test_dynamic_ai_intelligence.py  test_hospital_intelligence_engine.py  test_hospital_system.py  test_intelligence_engine.py  test_intelligence_engine_dynamic.py  test_market_data_engine.py  test_production_configuration.py  test_semantic_analyzer_dynamic.py  test_strategic_synthesizer_dynamic.py  test_system_smoke.py  test_whatsapp_automation.py
backend/tools/: README.md  production_readiness_assessment.py  single_hospital_implementation.py  validate_configuration.py
config/: README.md  base.json  configuration_manager.py  hospital_production.json  schema.json
config/business/: business_configs.json
config/environments/: development.json  production.json  staging.json
docs/: DOCUMENTATION_ORGANIZATION.md  PROGRESSIVE_INTELLIGENCE_INTEGRATION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY_HOSPITAL.md  PROJECT_ORGANIZATION.md  README.md  TECHNICAL_IMPLEMENTATION_SUMMARY.md  founder_resume.md
docs/analysis/: AI_HOSPITAL_CONSULTING_INDIA_REALITY_CHECK.md  COMPREHENSIVE_SYSTEM_ANALYSIS_REAL_WORLD_READINESS.md  DATABASE_REALITY_CHECK.md  DYNAMIC_TESTING_REALITY_CHECK.md  FOUNDATION_VS_DYNAMIC_AI_REALITY_CHECK.md  McKinsey_Way_Reference.txt  README.md  USELESS_BASIC_TESTS_ANALYSIS.md  hardcoded-values-analysis.md  hardcoded-values-audit.md
docs/api/: README.md
docs/architecture/: parallel_architecture_strategy.md
docs/configuration/: API_INTEGRATION_STRATEGY.md  API_RATE_LIMITS_USAGE.md  CONFIGURATION_ARCHITECTURE.md  CONFIGURATION_DOCUMENTATION.md  EXTERNAL_API_MAPPING.md  HARDCODED_VALUES_API_MAPPING.md  README.md  architecture-design.md  configuration-system.md
docs/contributing/: CONTRIBUTING.md  PROFESSIONAL_DOCUMENTATION_STANDARDS.md
docs/daily/: 2025-09-26_database_integration_milestone.md  2025-09-26_project_timeline_progress.md  2025-09-26_technical_implementation_details.md  README.md
docs/deployment/: README.md
docs/development/: CLEANUP_SUMMARY.md  DAY1_HOUR5-6_COMPLETION_SUMMARY.md  DAY1_HOUR7-8_COMPLETION_SUMMARY.md  DAY2_HOUR4-6_COMPLETION_SUMMARY.md  DAY2_HOUR4-6_FINAL_COMPLETION.md  DAY2_HOUR6-8_FINAL_DEPLOYMENT.md  IMPLEMENTATION_STRATEGY.md  Phase1_Week1-2_Data_Intelligence_Implementation.md  benchmark_data_collection_implementation.md  enterprise-structure-summary.md  progressive-intelligence-roadmap.md
docs/development-progress/: COMPETITIVE_ANALYSIS_SERVICE_PROGRESS_2025-09-14.md  DAILY_PROGRESS_REPORT_2025-09-14.md
docs/implementation/: PROFESSIONAL_DATABASE_SETUP.md  SINGLE_HOSPITAL_IMPLEMENTATION_CHECKLIST.md
docs/integration/: progressive-intelligence-integration-strategy.md
docs/production-deployment/: README.md  SINGLE_HOSPITAL_PRODUCTION_ROADMAP.md
docs/production-readiness/: PRODUCTION_READINESS_ROADMAP.md  README.md  campaign_generator_&dynamic_ai_parser_ROADMAP.md  day1-hour3-4-completion.md
docs/roadmap/: AI_HOSPITAL_CONSULTING_RESULTS_ROADMAP.md  local_business_roadmap.md  parallel_architecture_roadmap.md  technical_implementation_guide.md
docs/testing/: README.md
frontend-new/: package-lock.json  package.json
tests/: conftest.py
tests/archived/: TEST_FILE_ANALYSIS.md  test_competitive_analysis_config.py  test_dynamic_service.py  test_foundation_isolated.py  test_foundation_simple.py  test_pi_integration.py  test_progressive_intelligence_integration.py  test_week1_foundation.py
tests/integration/: test_hospital_integration.py
tests/unit/: test_hms_connectors.py  (+1 more)
(+115 files in other folders)
